[gd_scene load_steps=23 format=3 uid="uid://4myw2mtj60x3"]

[ext_resource type="Shader" path="res://border_glow_shader.gdshader" id="1_nu8o0"]
[ext_resource type="Script" path="res://testscene.gd" id="1_usc8i"]
[ext_resource type="Texture2D" uid="uid://by0rqyvvnwwsf" path="res://icon.svg" id="2_plc26"]
[ext_resource type="Shader" path="res://fractal2.gdshader" id="3_hl1v7"]
[ext_resource type="Shader" path="res://zooming_fractal.gdshader" id="3_tbr8v"]
[ext_resource type="Shader" path="res://newfractal.gdshader" id="4_sfr6c"]
[ext_resource type="Shader" path="res://testshader.gdshader" id="6_ke2bx"]
[ext_resource type="Shader" path="res://new_shader.gdshader" id="8_tdc0a"]
[ext_resource type="Shader" path="res://julia_set.gdshader" id="9_r411o"]
[ext_resource type="Shader" path="res://swapping_julia.gdshader" id="10_345hh"]
[ext_resource type="Shader" path="res://morph.gdshader" id="11_r5828"]
[ext_resource type="Shader" path="res://whackyshader.gdshader" id="12_bq3mb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_caxv3"]
shader = ExtResource("3_tbr8v")
shader_parameter/c = Vector2(-0.035, -0.065)
shader_parameter/max_iterations = 50.0
shader_parameter/escape_radius = 4.0
shader_parameter/zoom_speed = 0.01
shader_parameter/pulse_speed = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pqtlb"]
shader = ExtResource("3_hl1v7")
shader_parameter/c = Vector2(0.3, 0.6)
shader_parameter/max_iterations = 50.0
shader_parameter/escape_radius = 4.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ml8kr"]
shader = ExtResource("1_nu8o0")
shader_parameter/glow_color = Vector4(1, 1, 0, 1)
shader_parameter/glow_size = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_017ts"]
shader = ExtResource("4_sfr6c")
shader_parameter/c = Vector2(0.3, 0.6)
shader_parameter/max_iterations = 50.0
shader_parameter/escape_radius = 4.0
shader_parameter/zoom_speed = 0.01
shader_parameter/scroll_speed = 2.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_efffl"]
shader = ExtResource("6_ke2bx")
shader_parameter/center = Vector2(100, 200)
shader_parameter/zoom = 1.0
shader_parameter/max_iterations = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ulwve"]
shader = ExtResource("8_tdc0a")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/zoom = 1.0
shader_parameter/max_iterations = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0dqjd"]
shader = ExtResource("9_r411o")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/zoom = 5.0
shader_parameter/max_iterations = 50.0
shader_parameter/julia_constant = Vector2(-0.695, 0.37)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ua6x7"]
shader = ExtResource("10_345hh")
shader_parameter/julia_a = 0.285
shader_parameter/julia_b = 0.01
shader_parameter/glow_color = Color(1, 0.392157, 0, 1)
shader_parameter/glow_size = 5.0
shader_parameter/zoom_factor = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_flknx"]
shader = ExtResource("11_r5828")
shader_parameter/time = 0.0
shader_parameter/center = Vector2(0, 0)
shader_parameter/zoom = 1.0
shader_parameter/max_iterations = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ds2f0"]
shader = ExtResource("12_bq3mb")

[node name="Testscene" type="Node2D"]
script = ExtResource("1_usc8i")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_caxv3")
offset_top = 272.0
offset_right = 264.0
offset_bottom = 536.0
texture = ExtResource("2_plc26")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pqtlb")
offset_left = 288.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 200.0
color = Color(0.811765, 0.552941, 0.6, 0.87451)

[node name="TextureRect2" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ml8kr")
offset_left = 544.0
offset_top = 24.0
offset_right = 672.0
offset_bottom = 152.0
texture = ExtResource("2_plc26")

[node name="TextureRect3" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_017ts")
offset_right = 272.0
offset_bottom = 240.0
texture = ExtResource("2_plc26")

[node name="ColorRect2" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_efffl")
offset_left = 696.0
offset_right = 968.0
offset_bottom = 208.0

[node name="ColorRect3" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ulwve")
offset_left = 752.0
offset_top = 216.0
offset_right = 1048.0
offset_bottom = 512.0

[node name="ColorRect4" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_0dqjd")
offset_left = 304.0
offset_top = 224.0
offset_right = 432.0
offset_bottom = 336.0
color = Color(1, 0.423529, 1, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ua6x7")
offset_left = 480.0
offset_top = 192.0
offset_right = 696.0
offset_bottom = 344.0

[node name="ColorRect6" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_flknx")
offset_left = 336.0
offset_top = 368.0
offset_right = 600.0
offset_bottom = 600.0

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ds2f0")
position = Vector2(680, 472)
texture = ExtResource("2_plc26")
